# ambrs

./: .coverage  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  ambrs_camp_demo copy.ipynb  ambrs_camp_demo.ipynb  build_info.txt  camp_mechanisms_demo.ipynb  codecov.yml  demo copy.ipynb  demo.ipynb  demo.py  demo_01_h2so4_original_chem copy 2.ipynb  demo_02_camp_simple.ipynb  demo_02_simple_soa.ipynb  demo_camp_h2so4.ipynb  demo_duncan (1).ipynb  demo_emissions.ipynb  demo_emissions.py  demo_oct24.ipynb  demo_revised.py  demo_span_seeds.py  demo_with_camp.ipynb  requirements.txt  setup.py  viz.py
.github/workflows/: pr.yml  tests.yml
ambrs/: __init__.py  aero_model.py  aerosol.py  aerosol_model.py  analysis.py  camp.py  emissions.py  gas.py  mam4.py  mam4_dq_merge_attempt.py  mam4_semifinal.py  mphys.py  partmc copy.py  partmc.py  ppe.py  runners.py  scenario.py  viz.py
ambrs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ambrs/tests/: test_aerosol.py  test_ppe.py
ambrs/visualization/: __init__.py  input_ranges.py  input_table.py  output_plot.py
ambrs/visualization_old/: __init__.py  output_plot.py  output_pyparticle.py  viz_old.py
binder/: environment.yml
camp/s1_config/: mam4_aerosol_representation.json  mam4_config.json  mam_mech.json  partmc_config.json  pmc_mech.json
camp/s2_config/: species.json
camp/s3_config/: aerosol_phases.json  mechanism.json
camp_config/: mam4_config.json  mam_mech.json  partmc_config.json
camp_config_orig/: partmc_aerosol_representation.json  partmc_config.json  pmc_mech.json  species.json
camp_configs/simple_soa/: mam4_camp_config.json  partmc_aerosol_representation.json  partmc_camp_config.json  simple_soa_mech.json
cases/: s1_fpc_h2so4cond copy.ipynb  s1_fpc_h2so4cond.ipynb  s2_fpc_coag copy.ipynb  s2_fpc_coag.ipynb
config/mam4/: CMakeLists.txt
demos/h2so4_cond/: bootstrap_camp_h2so4_demo.sh
mam4_runs/001/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/002/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/003/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/004/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/005/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/006/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/007/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/008/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/009/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/010/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/011/: fort.130  fort.150  fort.30  fort.82  fort.90  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/012/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/013/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/014/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/015/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/016/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/017/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/018/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/019/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/020/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/021/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/022/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/023/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/024/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/025/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/026/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/027/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/028/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/029/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/030/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/031/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/032/: fort.130  fort.150  fort.30  fort.82  fort.93  fort.98  mam_output.nc  namelist
mam4_runs/033/: fort.130  fort.150  fort.30  (+5 more)
notebooks/: demo_revised.ipynb
standards/: s1_dpc_h2so4cond.ipynb  s1_fpc_h2so4cond.ipynb
test/: __init__.py  test_aerosol.py  test_analysis.py  test_camp.py  test_gas.py  test_integration_h2so4.py  test_mam4.py  test_partmc.py  test_ppe.py  test_viz.py
(+665 files in other folders)
